# libby

./: .gitignore  .prettierrc  Cargo.toml  README.md  bacon.toml  package.json  pnpm-lock.yaml
frontend/: .gitignore  package.json  tailwind.config.ts
src/: main.rs  test.rs
src/db/: authors.rs  books.rs  mod.rs  progress.rs  publisher.rs  user.rs
